# cbox

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile  a.out  addfrac.c  bestpractice.md  boker.c  bool.h  calc  calc.c  celcius.c  checksum.c  crun  date.c  dweight.c  dweight2.c  ex1.c  guess.c  length.c  main.c  numdigits.c  pre.c  square.c  square2.c  stack.c  sum.c  tbool.c  tcast.c  tchar.c  tfor.c  tloop.c  tprintf.c  tscanf.c  tsizeof.c  uppercase.c
a.out.dSYM/Contents/Resources/DWARF/: a.out
a.out.dSYM/Contents/Resources/Relocations/aarch64/: a.out.yml
advance/: list.c  utils.h
collections/: stack.c  stack.h  vec.c  vec.h
collections/tests/: test_vec.c
pointer/: a.out  decompose.c  minmax.c  p1.c  p2.c  p3.c  stack.c  sum.c
src/: bool.c  bool.h  celcius.c  cli.c  copy.c  dat.c  date.c  dweight.c  ex1.c  io.c  io1.c  io2.c  jump.c  length.c  pre.c  stack.c  stack.h  struct.c  struct1.c  tcast.c  tscanf.c  tsizeof.c  uppercase.c
src/advance/: list.h  main.c  node.c  node.h  utils.c
src/collections/: arr.c  arr.h  matrix.c  matrix.h  vec.c  vec.h  volume.c  volume.h
src/collections/tests/: test_vec.c
src/pointer/: reverse.c
src/ptr/: ptr.h  ptr1.c  ptr10.c  ptr11.c  ptr2.c  ptr20.c  ptr21.c  ptr22.c  ptr23.c  ptr3.c  ptr4.c  ptr5.c  ptr6.c  ptr7.c  ptr8.c  ptr9.c
src/str/: str.c  str.h  str1.c  str2.c  str3.c
